	7621 Token_of_Ziegfried		Revive player on death (if item is in inventoy? Needs a clearer description)
	Still need proper rates for most 11.3 Equipment that don't have their +rates/Status Infliction rates clearly defined.
	13107 Western_Outlaw		Need correct HIT and ASPD Rate
	----
========================
05/31
	* Fixed some 11.3 equips [Playtester]
	* Some small item fixes [Playtester]
	* Fixed duration of Authorative Badge [Playtester]
05/28
	* Fixed Black Leather Boots and Thorny Shield [Playtester]
	* Fixed Orc Archer's Bow and Silver Shotel [Playtester]
	- info from Doddler's wiki for both
05/26
	* Fixed mob name Atros -> Atroce [Playtester]
05/25
	* Some minor Thor Volcano mob skill changes [Playtester]
05/22
	* Made Thor Volcano mobs safe to use [Playtester]
	- raised their DEF/MDEF
	- raised their speed
	- removed 11.3 drops (using 11.2 drops)
	- added most of their skills thanks to Doddler
	* Rev. 10602 Poison Bottle now reduces SP to 0 as well. [L0ne_W0lf]
05/20
	* Chase Walk's casting time is now 1200ms [Playtester]
	- also fixed movement speed of Sword Master
05/17
	* Updated Knocker [Playtester]
	* Added Magnum Break to Magmaring [Playtester]
	* Fixed Earthen and Gale Bow being all mixed up [Playtester]
	* Updated price and weight of some etc items [Playtester]
	- removed weight on The Sign quest items
05/16
	* Rev. 10551 Corrected weight for hunting spear (420 -> 4200) as pointed out by Samueloa. [L0ne_W0lf]
05/14
	* Blocked expired event items bonuses from Bunch of Carnation, [Lupus]
	  Woman Glory, Lord Ring, Republic Anniversary Ring, Carnival Jester,
	  2nd Anniversary Party Hat, Australian Flag Hat,
	NOTE: If u want to use outdated item bonuses then just use item_db2.txt or
		use setitemscript() function for events
05/12
	* Added some monsters and fixed some items [Playtester]
05/08
	* Fixed some aegis names [Playtester]
05/06
	* Fixed some syntax errors in the item_db and updated sql files [Playtester]
05/04